# rust_on_nails

./: .gitignore  devenv.nix  docker-compose.yml
crates/axum-server/: Cargo.toml
crates/axum-server/src/: errors.rs  main.rs
crates/db/: Cargo.toml  build.rs  schema.sql
crates/db/migrations/: 20230811113738_user_tables.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
