[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cornucopia_async = "0.4.0"
deadpool-postgres = "0.10.5"
futures = "0.3.28"
postgres-types = "0.2.5"
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.8"
tokio-postgres-rustls = "0.10.0"
webpki-roots = "0.25.2"
